--- a/index.html
+++ b/index.html
@@ -378,7 +378,7 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
           margin-right: auto;
           background: black;
           color: white;
-          border: 1px solid lime;
+          border: 1px solid darkgray;
           border-radius: 0.3em;
           padding: 0.2em;
           overflow: scroll;
