Add note about Tablets and Wortsworth

--- a/index.html
+++ b/index.html
@@ -415,6 +415,11 @@ OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
       those values will appear on the map along with a drop down list of the same items.
       Move your mouse over the marker you want to discover the item's name.
 
+      <h4>Ancient Stone Tablets</h4>
+      <p>Make sure that the Ancient Stone Tablets have a matching _Npc::Wortsworth otherwise they will not get
+        counted towards you map%; this is the same as in the game.
+      </p>
+      
       <h4>Basic Document</h4>
       <pre>
 ---
