Update github links

--- a/index.html
+++ b/index.html
@@ -839,7 +839,7 @@ _route:
           let url = new URL(window.location)
           const providers = {
               gist: "https://api.github.com/gists/",
-              github: "https://api.github.com/repos/",
+              github: "https://raw.githubusercontent.com/",
               codeberg: "https://codeberg.org/api/v1/repos/",
           }
           for(const key of Object.keys(providers)) {
